# Quartzwood

./: .gitignore  README.md  alembic.ini  pyproject.toml  test_cmd.txt
migrations/: env.py
migrations/versions/: f9c4461f03a9_initial_schema.py
quartzwood/: db.py
quartzwood/api/: app.py  routes.py
quartzwood/api/templates/: index.html
quartzwood/cli/: main.py
quartzwood/models/: card.py  collection.py  enums.py  storage.py
quartzwood/services/: cards.py  cli_helper.py  collection.py  scryfall.py  storage.py
