[project]
name = "quartzwood"
version = "0.1.0"
description = ""
authors = [
    {name = "Patch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.38,<0.0.39)",
    "typer (>=0.26.7,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "rich (>=15.0.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
qw = "quartzwood.cli.main:app"
qw-serve = "quartzwood.api.app:run"